# fat32-at-home

./: Cargo.toml  create_test_fat
fat32/: Cargo.toml
fat32/src/: boot.rs  directory.rs  driver.rs  error.rs  file.rs  io.rs  lib.rs  primitives.rs  util.rs
src/: filesystem.rs  inode.rs  main.rs
src/fat32/: boot.rs  error.rs  mod.rs  util.rs
test_data/dir1/: a.txt
