[package]
name = "fat32_at_home"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["fat32"]


[profile.release]
debug = true

[dependencies]
fat32 = {path = "fat32"}
nix = { version = "0.29", features = ["user"]}
fuser = "0.14.0"
parking_lot = "0.12.3"
log = "0.4.21"
simple_logger = "5.0.0"
rayon = "1"
